# rust_api

./: .env.example  Cargo.toml
migrations/: 20260324111215_create_todos.sql
src/: handlers.rs  main.rs  models.rs
wasm_client/: Cargo.toml
